[JPA][Cedric-Janelle] re-factored: changed employee repository to interface repository